working schema - MVC

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <developers>
     <developer>
       <id>matned</id>
-      <name>Mateusz Niedbal</name>
+      <name>Mateusz Niedbał</name>
       <email>mat.niedbal@mrndesign.eu</email>
       <organization>mrndesign.eu</organization>
       <organizationUrl>https://mrndesign.eu</organizationUrl>
